tests/error/modifier_errors/loop_control_found.err
Error: Unexpected loop control (at $FILE:9:12)
  | 
7 |     for i in range(123):
8 |         with dagger:
9 |             continue
  |             ^^^^^^^^ Continue found in a `With` block

Note:
  | 
7 |     for i in range(123):
8 |         with dagger:
  |              ------ modifier is used here

Guppy compilation failed due to 1 previous error
